[lworld] compiler/runtime/Test8010927.java fails with fatal error: DEBUG MESSAGE: Verify oop store failed

XMLWordPrintable

      When executed with ZGC. Reproduces with -Xint.

      # Internal Error (/oracle/valhalla1/open/src/hotspot/cpu/x86/macroAssembler_x86.cpp:896), pid=14250, tid=14268
      # fatal error: DEBUG MESSAGE: Verify oop store failed

      Stack: [0x00007f2521963000,0x00007f2521a64000], sp=0x00007f2521a61f50, free space=1019k
      Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
      V [libjvm.so+0x12a1b21] MacroAssembler::debug64(char*, long, long*)+0x41
      j compiler.runtime.Test8010927.fill_heap()V+61
      j compiler.runtime.Test8010927.main([Ljava/lang/String;)V+98
      v ~StubRoutines::call_stub
      V [libjvm.so+0xe5ed0c] JavaCalls::call_helper(JavaValue*, methodHandle const&, JavaCallArguments*, Thread*)+0x73c
      V [libjvm.so+0x15c794e] invoke(InstanceKlass*, methodHandle const&, Handle, bool, objArrayHandle, BasicType, objArrayHandle, bool, Thread*) [clone .constprop.107]+0xc5e
      V [libjvm.so+0x15c8b14] Reflection::invoke_method(oop, Handle, objArrayHandle, Thread*)+0x204
      V [libjvm.so+0xfcd97a] JVM_InvokeMethod+0x33a
      j jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Ljava/lang/reflect/Method;Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object;+0 java.base
      j jdk.internal.reflect.NativeMethodAccessorImpl.invoke(Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object;+100 java.base
      j jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object;+6 java.base
      j java.lang.reflect.Method.invoke(Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object;+59 java.base
      j com.sun.javatest.regtest.agent.MainWrapper$MainThread.run()V+172
      j java.lang.Thread.run()V+11 java.base
      v ~StubRoutines::call_stub
      V [libjvm.so+0xe5ed0c] JavaCalls::call_helper(JavaValue*, methodHandle const&, JavaCallArguments*, Thread*)+0x73c
      V [libjvm.so+0xe5a9ba] JavaCalls::call_virtual(JavaValue*, Handle, Klass*, Symbol*, Symbol*, Thread*)+0x3ea
      V [libjvm.so+0xfa9bde] thread_entry(JavaThread*, Thread*)+0x12e
      V [libjvm.so+0x17a9256] JavaThread::thread_main_inner()+0x206
      V [libjvm.so+0x17ae696] Thread::call_run()+0xf6
      V [libjvm.so+0x149d55e] thread_native_entry(Thread*)+0x10e

            Assignee:
            David Simms
            Reporter:
            Tobias Hartmann
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: