8233200: [lworld] compiler/runtime/Test8010927.java fails with fatal error: DEBUG MESSAGE: Verify oop store failed

Reviewed-by: fparain